add some code and comments

--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -379,11 +379,11 @@
         "bool(item.strip()) # empty string"
       ],
       "metadata": {
-        "id": "fiEGrRriw1Vi",
-        "outputId": "2d887aa4-7139-4ece-a2fa-242b15de1f4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fiEGrRriw1Vi",
+        "outputId": "2d887aa4-7139-4ece-a2fa-242b15de1f4d"
       },
       "id": "fiEGrRriw1Vi",
       "execution_count": 11,
@@ -448,27 +448,29 @@
     {
       "cell_type": "code",
       "source": [
-        "tt = ''.join(result)\n",
+        "print(result)\n",
+        "tt = ' '.join(result) # concatenate the strings in the list of result with ' ' as a separator\n",
         "print(tt)\n",
         "text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', tt)\n",
         "print(text)"
       ],
       "metadata": {
-        "id": "jvEUThxs6TeZ",
-        "outputId": "cf48d0f5-46e7-40e6-9379-73d9524e939a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jvEUThxs6TeZ",
+        "outputId": "f0aaf90c-4f9c-4879-c86d-c1ed25012f0c"
       },
       "id": "jvEUThxs6TeZ",
-      "execution_count": 30,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello,world.Isthis--atest?\n",
-            "Hello,world.Isthis--atest?\n"
+            "['Hello', ',', 'world', '.', 'Is', 'this', '--', 'a', 'test', '?']\n",
+            "Hello , world . Is this -- a test ?\n",
+            "Hello, world. Is this -- a test?\n"
           ]
         }
       ]
@@ -752,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 37,
       "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5",
       "metadata": {
         "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5"
@@ -775,7 +777,7 @@
         "\n",
         "    def decode(self, ids):  # Converts token IDs back into text\n",
         "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
-        "        # Replace spaces before the specified punctuations\n",
+        "        # Remove spaces before the specified punctuations\n",
         "        '''\n",
         "        re.sub(): This function searches for a pattern in a string and replaces it with a specified replacement.\n",
         "\n",
@@ -825,16 +827,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
-        "outputId": "32989faa-0a5f-4c87-b19e-3b8490aaf62e"
+        "outputId": "193e8aec-b65a-4a01-8f97-bbeb029b8d47"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[1, 56, 2, 850, 988, 602, 533, 746, 5, 1126, 596, 5, 1, 67, 7, 38, 851, 1108, 754, 793, 7]\n"
           ]
@@ -861,26 +866,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "id": "01d8c8fb-432d-4a49-b332-99f23b233746",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
         "id": "01d8c8fb-432d-4a49-b332-99f23b233746",
-        "outputId": "37290924-505e-4b69-df70-bcc30b8c587a"
+        "outputId": "3251e1c6-d965-4533-a10b-73360086cb19"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'\" It\\' s the last he painted, you know,\" Mrs. Gisburn said with pardonable pride.'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 40
         }
       ],
       "source": [
-        "tokenizer.decode(ids)"
+        "tokenizer.decode(ids)  # turn these token IDs back into text using the decode method"
       ]
     },
     {
@@ -990,23 +1002,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "id": "d5767eff-440c-4de1-9289-f789349d6b85",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 329
+        },
         "id": "d5767eff-440c-4de1-9289-f789349d6b85",
-        "outputId": "9cc5afa6-2e8a-437b-ba4f-705b64f7efc4"
+        "outputId": "1e78856f-7e64-4854-8c19-7ff18b1fe8f8"
       },
       "outputs": [
         {
+          "output_type": "error",
           "ename": "KeyError",
           "evalue": "'Hello'",
-          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[17], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m SimpleTokenizerV1(vocab)\n\u001b[1;32m      3\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello, do you like tea. Is this-- a test?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m tokenizer\u001b[38;5;241m.\u001b[39mencode(text)\n",
-            "Cell \u001b[0;32mIn[13], line 12\u001b[0m, in \u001b[0;36mSimpleTokenizerV1.encode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m      7\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m([,.:;?_!\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m()\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124m]|--|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms)\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n\u001b[1;32m      9\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     10\u001b[0m     item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed \u001b[38;5;28;01mif\u001b[39;00m item\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m     11\u001b[0m ]\n\u001b[0;32m---> 12\u001b[0m ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstr_to_int[s] \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ids\n",
-            "Cell \u001b[0;32mIn[13], line 12\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      7\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m([,.:;?_!\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m()\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124m]|--|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms)\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n\u001b[1;32m      9\u001b[0m preprocessed \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     10\u001b[0m     item\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m preprocessed \u001b[38;5;28;01mif\u001b[39;00m item\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m     11\u001b[0m ]\n\u001b[0;32m---> 12\u001b[0m ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstr_to_int[s] \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m preprocessed]\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ids\n",
+            "\u001b[0;32m<ipython-input-41-d80f9ff7dada>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Hello, do you like tea. Is this-- a test?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-37-d865dab02921>\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-37-d865dab02921>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# stripping whithespaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         ]\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr_to_int\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpreprocessed\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# converrting tokens to ID's\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyError\u001b[0m: 'Hello'"
           ]
         }
@@ -1033,7 +1049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "id": "ce9df29c-6c5b-43f1-8c1a-c7f7b79db78f",
       "metadata": {
         "id": "ce9df29c-6c5b-43f1-8c1a-c7f7b79db78f"
@@ -1048,26 +1064,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "57c3143b-e860-4d3b-a22a-de22b547a6a9",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "57c3143b-e860-4d3b-a22a-de22b547a6a9",
-        "outputId": "a18bc7ff-e734-4dd0-ca39-f2156f36eb2b"
+        "outputId": "b45525ee-7072-4101-f34b-935f12b64652"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1132"
             ]
           },
-          "execution_count": 19,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 43
         }
       ],
       "source": [
-        "len(vocab.items())"
+        "len(vocab.items())  # previously it was 1130"
       ]
     },
     {
@@ -1108,7 +1127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "948861c5-3f30-4712-a234-725f20d26f68",
       "metadata": {
         "id": "948861c5-3f30-4712-a234-725f20d26f68"
@@ -1123,7 +1142,7 @@
         "    def encode(self, text):\n",
         "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
         "        preprocessed = [item.strip() for item in preprocessed if item.strip()]\n",
-        "        preprocessed = [\n",
+        "        preprocessed = [  # Replaces unknown words by <|unk|> tokens\n",
         "            item if item in self.str_to_int\n",
         "            else \"<|unk|>\" for item in preprocessed\n",
         "        ]\n",
@@ -1133,7 +1152,7 @@
         "\n",
         "    def decode(self, ids):\n",
         "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
-        "        # Replace spaces before the specified punctuations\n",
+        "        # Remove spaces before the specified punctuations\n",
         "        text = re.sub(r'\\s+([,.:;?!\"()\\'])', r'\\1', text)\n",
         "        return text"
       ]
@@ -1150,16 +1169,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "4133c502-18ac-4412-9f43-01caf4efa3dc",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "4133c502-18ac-4412-9f43-01caf4efa3dc",
-        "outputId": "0c436625-bc19-43f6-82ec-d567eaddf566"
+        "outputId": "6c6ec72c-a789-4895-d085-cc1089423f37"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Hello, do you like tea? <|endoftext|> In the sunlit terraces of the palace.\n"
           ]
@@ -1178,22 +1200,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "7ed395fe-dc1b-4ed2-b85b-457cc35aab60",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "7ed395fe-dc1b-4ed2-b85b-457cc35aab60",
-        "outputId": "d77c690f-3834-40aa-9854-72e4a5f40796"
+        "outputId": "a22abf67-442c-4c4f-e777-801f815de896"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[1131, 5, 355, 1126, 628, 975, 10, 1130, 55, 988, 956, 984, 722, 988, 1131, 7]"
             ]
           },
-          "execution_count": 23,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 51
         }
       ],
       "source": [
@@ -1202,22 +1227,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "059367f9-7a60-4c0d-8a00-7c4c766d0ebc",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
         "id": "059367f9-7a60-4c0d-8a00-7c4c766d0ebc",
-        "outputId": "135488c3-d59f-4d3e-a34a-671664c3905d"
+        "outputId": "07194b13-4323-493e-ebf9-df2fa7c86583"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'<|unk|>, do you like tea? <|endoftext|> In the sunlit terraces of the <|unk|>.'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 24,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 52
         }
       ],
       "source": [
@@ -1251,30 +1283,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "ede1d41f-934b-4bf4-8184-54394a257a94",
       "metadata": {
         "id": "ede1d41f-934b-4bf4-8184-54394a257a94"
       },
       "outputs": [],
       "source": [
-        "# pip install tiktoken"
+        "!pip -q install tiktoken"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "48967a77-7d17-42bf-9e92-fc619d63a59e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "48967a77-7d17-42bf-9e92-fc619d63a59e",
-        "outputId": "04ffd5dc-0aa5-43b9-c131-98e1f561414c"
+        "outputId": "f9bc41da-0f23-4c90-ef93-d872898c9c4f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "tiktoken version: 0.7.0\n"
+            "tiktoken version: 0.8.0\n"
           ]
         }
       ],
@@ -1287,7 +1322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128",
       "metadata": {
         "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128"
