--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -767,6 +767,7 @@
         "            torch.nn.Linear(20, num_outputs),\n",
         "        )\n",
         "\n",
+        "    # forward method usually takes the input and return the output of the layer\n",
         "    def forward(self, x):  # x is the input of our model\n",
         "        logits = self.layers(x)  # The outputs of the last layer are called logits.\n",
         "        return logits"
