Add some comments and codes

--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -235,7 +235,7 @@
         }
       ],
       "source": [
-        "print(tensor3d_3) # changes because of memory sharing"
+        "print(tensor3d_3) # it changed because of memory sharing"
       ]
     },
     {
@@ -976,38 +976,46 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "# just a simple example of using axis in sum\n",
         "a2d = np.array([[1,2,3], [4,5,6]])\n",
         "print(a2d)\n",
-        "a2d.sum(axis=1)"
+        "print()\n",
+        "print(a2d.sum(axis=1))\n",
+        "print()\n",
+        "a2d.sum(axis=1, keepdims=True)"
       ],
       "metadata": {
         "id": "wXA_7GRUHQIq",
-        "outputId": "ba545806-9381-4b51-c28e-b331055df8c6",
+        "outputId": "f99ce93b-8d5d-403d-f9cd-4c75387af9b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "wXA_7GRUHQIq",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[[1 2 3]\n",
-            " [4 5 6]]\n"
+            " [4 5 6]]\n",
+            "\n",
+            "[ 6 15]\n",
+            "\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 6, 15])"
+              "array([[ 6],\n",
+              "       [15]])"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 5
         }
       ]
     },
@@ -1089,7 +1097,7 @@
         "\n",
         "X = torch.rand((1, 50))  # input has a shape of (1, 50)\n",
         "out = model(X)  # model(X) automatically executes forward method\n",
-        "print(out)"
+        "print(out)  # the output has a size of 3 as we defined in Model instantiation"
       ]
     },
     {
