--- a/ch03/01_main-chapter-code/ch03.ipynb
+++ b/ch03/01_main-chapter-code/ch03.ipynb
@@ -44,18 +44,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import torch"
+      ],
+      "metadata": {
+        "id": "K0LMw_p7KVA2"
+      },
+      "id": "K0LMw_p7KVA2",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "id": "e58f33e8-5dc9-4dd5-ab84-5a011fa11d92",
       "metadata": {
         "id": "e58f33e8-5dc9-4dd5-ab84-5a011fa11d92",
-        "outputId": "ce883091-c7cd-40a6-fdde-5a698f87a61c"
+        "outputId": "9d477bb7-37cf-4a0e-ba48-6329cdee5e32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "torch version: 2.4.0\n"
+            "torch version: 2.5.1+cu121\n"
           ]
         }
       ],
@@ -298,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "id": "22b9556a-aaf8-4ab4-a5b4-973372b0b2c3",
       "metadata": {
         "id": "22b9556a-aaf8-4ab4-a5b4-973372b0b2c3"
@@ -356,11 +371,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "6fb5b2f8-dd2c-4a6d-94ef-a0e9ad163951",
       "metadata": {
         "id": "6fb5b2f8-dd2c-4a6d-94ef-a0e9ad163951",
-        "outputId": "d096988a-d1b1-4f7c-8f11-a71b19e63fec",
+        "outputId": "f133e97a-2b01-49a1-d897-d4872ef86b12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -396,11 +411,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "9842f39b-1654-410e-88bf-d1b899bf0241",
       "metadata": {
         "id": "9842f39b-1654-410e-88bf-d1b899bf0241",
-        "outputId": "296623d0-50cf-4a2f-b06a-92a80629b6a1",
+        "outputId": "67b9bc78-44c8-47c3-b9ae-778be20a7181",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -448,11 +463,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "id": "e3ccc99c-33ce-4f11-b7f2-353cf1cbdaba",
       "metadata": {
         "id": "e3ccc99c-33ce-4f11-b7f2-353cf1cbdaba",
-        "outputId": "7ea01750-d957-462d-8543-a63bc53c8c3f",
+        "outputId": "a90c3b21-22d0-470a-c64c-08bd7e5d6808",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -487,11 +502,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "id": "07b2e58d-a6ed-49f0-a1cd-2463e8d53a20",
       "metadata": {
         "id": "07b2e58d-a6ed-49f0-a1cd-2463e8d53a20",
-        "outputId": "92c54414-ceca-458b-9be8-ef59dc9a5c40",
+        "outputId": "ee5ecfc3-a62e-4ecb-90b4-7def96368ef7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -529,11 +544,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "id": "2d99cac4-45ea-46b3-b3c1-e000ad16e158",
       "metadata": {
         "id": "2d99cac4-45ea-46b3-b3c1-e000ad16e158",
-        "outputId": "c7780667-009d-43c5-912d-2b6f503fe286",
+        "outputId": "86fb6e98-83da-44e8-f406-5b302a73c193",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -577,11 +592,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "id": "8fcb96f0-14e5-4973-a50e-79ea7c6af99f",
       "metadata": {
         "id": "8fcb96f0-14e5-4973-a50e-79ea7c6af99f",
-        "outputId": "06b45353-0a53-4fb1-f45b-462aa02b2d56",
+        "outputId": "355cabf0-72a4-4f26-d677-a6364c10f77d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -674,11 +689,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "id": "04004be8-07a1-468b-ab33-32e16a551b45",
       "metadata": {
         "id": "04004be8-07a1-468b-ab33-32e16a551b45",
-        "outputId": "c889eb83-d105-49d4-e521-d90d34daa417",
+        "outputId": "b4d7afd2-e7a7-42c6-d767-45932c7aaa7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -719,11 +734,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "id": "2cea69d0-9a47-45da-8d5a-47ceef2df673",
       "metadata": {
         "id": "2cea69d0-9a47-45da-8d5a-47ceef2df673",
-        "outputId": "d63d2555-8ac9-42a9-d9ba-e85f80a3e333",
+        "outputId": "20106bfa-4a37-4b62-ae71-61ef3917d34c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -759,11 +774,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "id": "fa4ef062-de81-47ee-8415-bfe1708c81b8",
       "metadata": {
         "id": "fa4ef062-de81-47ee-8415-bfe1708c81b8",
-        "outputId": "9a045988-aabb-45f4-8221-23a53cc4b69e",
+        "outputId": "26b07840-8ec8-4561-c00c-de4fc2ce67b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -799,11 +814,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "id": "112b492c-fb6f-4e6d-8df5-518ae83363d5",
       "metadata": {
         "id": "112b492c-fb6f-4e6d-8df5-518ae83363d5",
-        "outputId": "7d32a234-ef77-4f7f-a34a-8faa4ea1a53e",
+        "outputId": "508660b2-3434-45e1-83c4-3a19c07e2648",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -832,13 +847,13 @@
       ],
       "metadata": {
         "id": "cAuJCkf4kQGj",
-        "outputId": "9801d83c-ff2d-471f-8a56-bc7939d2dc3d",
+        "outputId": "f5249922-5cf7-488c-a85b-7970ac6cd410",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "cAuJCkf4kQGj",
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -861,11 +876,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "id": "ba8eafcf-f7f7-4989-b8dc-61b50c4f81dc",
       "metadata": {
         "id": "ba8eafcf-f7f7-4989-b8dc-61b50c4f81dc",
-        "outputId": "8f195ab8-8861-4f4d-ded2-7a5bcbfd2002",
+        "outputId": "b1fe7951-97bb-475b-bb24-bd017188a915",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -901,11 +916,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "id": "2570eb7d-aee1-457a-a61e-7544478219fa",
       "metadata": {
         "id": "2570eb7d-aee1-457a-a61e-7544478219fa",
-        "outputId": "f4013b26-08f1-4981-9af0-6d8c77c22c1b",
+        "outputId": "014232ec-510e-41fb-ace2-05d02392ffa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1018,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 17,
       "id": "8250fdc6-6cd6-4c5b-b9c0-8c643aadb7db",
       "metadata": {
         "id": "8250fdc6-6cd6-4c5b-b9c0-8c643aadb7db"
@@ -1042,7 +1057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "id": "bfd7259a-f26c-4cea-b8fc-282b5cae1e00",
       "metadata": {
         "id": "bfd7259a-f26c-4cea-b8fc-282b5cae1e00"
@@ -1051,7 +1066,7 @@
       "source": [
         "torch.manual_seed(123)\n",
         "\n",
-        "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
+        "W_query = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)  # initializing each parameters with a random matrix\n",
         "W_key   = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)\n",
         "W_value = torch.nn.Parameter(torch.rand(d_in, d_out), requires_grad=False)"
       ]
@@ -1068,11 +1083,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 19,
       "id": "73cedd62-01e1-4196-a575-baecc6095601",
       "metadata": {
         "id": "73cedd62-01e1-4196-a575-baecc6095601",
-        "outputId": "84b2ff2e-ec9e-47c6-eeeb-b12dee29ab2e",
+        "outputId": "8a102024-f425-43f7-a9b3-835590ad3e36",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1106,11 +1121,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 20,
       "id": "8c1c3949-fc08-4d19-a41e-1c235b4e631b",
       "metadata": {
         "id": "8c1c3949-fc08-4d19-a41e-1c235b4e631b",
-        "outputId": "d081ae64-c729-462e-f67b-f462ff098dfb",
+        "outputId": "e13f49a0-ca14-458f-fd97-b5168aa63890",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1155,11 +1170,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 21,
       "id": "64cbc253-a182-4490-a765-246979ea0a28",
       "metadata": {
         "id": "64cbc253-a182-4490-a765-246979ea0a28",
-        "outputId": "51f5b1a9-afeb-4e7e-efa7-e3e7ffcab9f1",
+        "outputId": "0823d6bd-133f-40f4-e0f4-c74ce1f98600",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1191,11 +1206,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 22,
       "id": "b14e44b5-d170-40f9-8847-8990804af26d",
       "metadata": {
         "id": "b14e44b5-d170-40f9-8847-8990804af26d",
-        "outputId": "e0fc6960-2256-4a32-d998-bde6dd965cd8",
+        "outputId": "186ac3bf-57f8-4008-f31e-82d2e249e35f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1237,11 +1252,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 23,
       "id": "146f5587-c845-4e30-9894-c7ed3a248153",
       "metadata": {
         "id": "146f5587-c845-4e30-9894-c7ed3a248153",
-        "outputId": "91b85bd2-b55d-4d22-a1ba-052d95b2e80b",
+        "outputId": "de1d8e19-7ae1-48ce-a699-d7217cc7c870",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1283,11 +1298,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 24,
       "id": "e138f033-fa7e-4e3a-8764-b53a96b26397",
       "metadata": {
         "id": "e138f033-fa7e-4e3a-8764-b53a96b26397",
-        "outputId": "9d7bbe4a-9222-4938-d316-998b3ee502a5",
+        "outputId": "0a6c2424-c181-4a7d-c3ee-4df402243339",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1328,11 +1343,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 25,
       "id": "51590326-cdbe-4e62-93b1-17df71c11ee4",
       "metadata": {
         "id": "51590326-cdbe-4e62-93b1-17df71c11ee4",
-        "outputId": "4aef12ea-c34e-4cbc-a876-a22abd887b7e",
+        "outputId": "6b96f129-d3ad-456e-8c5a-bee834ab0411",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1404,11 +1419,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 26,
       "id": "73f411e3-e231-464a-89fe-0a9035e5f839",
       "metadata": {
         "id": "73f411e3-e231-464a-89fe-0a9035e5f839",
-        "outputId": "0114292b-a2af-4786-9d93-54422d289921",
+        "outputId": "68d4093d-571a-47a6-e1d2-154f7fe21892",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1537,11 +1552,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 27,
       "id": "1933940d-0fa5-4b17-a3ce-388e5314a1bb",
       "metadata": {
         "id": "1933940d-0fa5-4b17-a3ce-388e5314a1bb",
-        "outputId": "310b3338-45a7-4232-e5dd-a92e8a5c8a60",
+        "outputId": "7dfa4975-bdf3-45ba-e054-ca54dc4f4e75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1584,11 +1599,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 28,
       "id": "43f3d2e3-185b-4184-9f98-edde5e6df746",
       "metadata": {
         "id": "43f3d2e3-185b-4184-9f98-edde5e6df746",
-        "outputId": "a22ab54b-20ec-4abe-b7c3-4e68861d3658",
+        "outputId": "d41161a7-5f72-440f-ec52-144ec20199a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1625,16 +1640,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "9f531e2e-f4d2-4fea-a87f-4c132e48b9e7",
       "metadata": {
         "id": "9f531e2e-f4d2-4fea-a87f-4c132e48b9e7",
-        "outputId": "cbcabe68-827b-4b40-f10b-4efd3de57b02"
+        "outputId": "6eba30ce-bb23-4656-8a54-56813ac2b619",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "tensor([[0.1921, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
             "        [0.2041, 0.1659, 0.0000, 0.0000, 0.0000, 0.0000],\n",
@@ -1659,13 +1677,13 @@
       ],
       "metadata": {
         "id": "EAEeGgiHGd8p",
-        "outputId": "b44fa4e4-01af-466b-fd39-2fa144692c70",
+        "outputId": "196835e1-2d03-4c92-95c3-312fb71bfdba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "EAEeGgiHGd8p",
-      "execution_count": 32,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,7 +1724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "6d392083-fd81-4f70-9bdf-8db985e673d6",
       "metadata": {
         "id": "6d392083-fd81-4f70-9bdf-8db985e673d6",
@@ -1769,16 +1787,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "a2be2f43-9cf0-44f6-8d8b-68ef2fb3cc39",
       "metadata": {
         "id": "a2be2f43-9cf0-44f6-8d8b-68ef2fb3cc39",
-        "outputId": "f9ae8335-932a-46da-e812-ca26e76afaff"
+        "outputId": "20573394-8ff3-4434-a65e-55d5c3ffa683",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
             "        [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
@@ -1791,9 +1812,42 @@
         }
       ],
       "source": [
-        "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
-        "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+        "# Upper triangle matrix with main diag = 0, by default, the main diag is not zero in triu\n",
+        "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)  # By default diagonal=0\n",
+        "# masked_fill gets a boolean mask and a value to fill True elemants with\n",
+        "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)  # bool() method for torch tensor retruns a boolean equivalent of the tensor\n",
         "print(masked)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A simple code to see the result of torch.triu function\n",
+        "mask = torch.triu(torch.ones(context_length, context_length), diagonal=3)\n",
+        "print(mask)"
+      ],
+      "metadata": {
+        "id": "081z_NiLXKAv",
+        "outputId": "31b8151b-4f2c-472c-8e32-d5b3b3f0d3b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "081z_NiLXKAv",
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0., 0., 0., 1., 1., 1.],\n",
+            "        [0., 0., 0., 0., 1., 1.],\n",
+            "        [0., 0., 0., 0., 0., 1.],\n",
+            "        [0., 0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0., 0.],\n",
+            "        [0., 0., 0., 0., 0., 0.]])\n"
+          ]
+        }
       ]
     },
     {
@@ -1832,6 +1886,36 @@
       "source": [
         "attn_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=-1)\n",
         "print(attn_weights)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+        "b = torch.tensor(a)\n",
+        "\n",
+        "print(b.bool())"
+      ],
+      "metadata": {
+        "id": "qBmaqb-MaI45",
+        "outputId": "aaf87cc9-addb-4898-b26d-02739ea3b5a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "qBmaqb-MaI45",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[True, True, True],\n",
+            "        [True, True, True],\n",
+            "        [True, True, True]])\n"
+          ]
+        }
       ]
     },
     {
