--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -44,21 +44,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
-        "outputId": "3509e0d7-f91e-42b3-a9cb-c51168df148b"
+        "outputId": "a603e5db-f49c-4ca6-8cfa-46b72c9ad04e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.5.1+cu121\n"
+            "2.5.1+cu124\n"
           ]
         }
       ],
@@ -70,14 +70,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
-        "outputId": "20c788c2-28ad-41a4-916f-ae6e82bc1c9d"
+        "outputId": "e02d32b0-7d65-48ee-9fb1-ddf1d9c587a7"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "a3a464d6-cec8-4363-87bd-ea4f900baced",
       "metadata": {
         "id": "a3a464d6-cec8-4363-87bd-ea4f900baced"
@@ -183,14 +183,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
-        "outputId": "bd93508b-2be9-455b-9341-8870d5423fef"
+        "outputId": "c3cfc909-6598-4ba6-fb74-af87b1ba8b4d"
       },
       "outputs": [
         {
@@ -212,14 +212,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
-        "outputId": "f75ca87b-3080-47c5-c1ee-b509c210325b"
+        "outputId": "345e03a4-3f1f-4a72-8e6b-37733901f78d"
       },
       "outputs": [
         {
@@ -245,13 +245,13 @@
       ],
       "metadata": {
         "id": "Mo4tRYSBSjdz",
-        "outputId": "6a07966e-8ffb-4f2e-8c69-5b268ad34ac1",
+        "outputId": "dfc15db9-257c-4073-978b-10e647a26e29",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Mo4tRYSBSjdz",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,11 +277,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
       "metadata": {
         "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
-        "outputId": "e82858af-c96c-4734-8842-171855c92984",
+        "outputId": "e920434f-58e0-4580-d9f8-a9dc5109a45f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -302,11 +302,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
       "metadata": {
         "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
-        "outputId": "e1e9f0b7-45a9-430d-e9e3-affd4bddf432",
+        "outputId": "c17dd66a-aaf2-4cfe-da47-bec3d795d9d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -329,14 +329,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
-        "outputId": "5d81362f-36a7-4c40-e980-cde3fe2d9b2d"
+        "outputId": "5604fdf2-88b7-4939-88f5-19a31946ce0a"
       },
       "outputs": [
         {
@@ -364,11 +364,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
       "metadata": {
         "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
-        "outputId": "14035b9c-4ca7-49c3-8a2f-a69964b24319",
+        "outputId": "630b7601-22b2-417c-ad2f-1b18a2e5edd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -394,11 +394,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
       "metadata": {
         "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
-        "outputId": "0765727f-89ef-48d8-a950-aeec667a951c",
+        "outputId": "46bb063f-92f6-4765-8131-e2068a7c6b69",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -421,11 +421,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
       "metadata": {
         "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
-        "outputId": "1fbf5f60-3475-4ed7-a279-471cd15c79ca",
+        "outputId": "b953bd96-0c46-466f-df2c-5f6f5848e130",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -448,11 +448,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
       "metadata": {
         "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
-        "outputId": "41428083-d1d8-4eb6-e10c-8a50d5f525c1",
+        "outputId": "21ae9df2-64a6-4a80-d0a5-4196caaadf8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -476,11 +476,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
       "metadata": {
         "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
-        "outputId": "cb8162dd-c2d5-438d-c1cc-5cbea74dfdca",
+        "outputId": "cb80a777-a819-4147-bd0a-d7bc25b9080e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -505,11 +505,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
       "metadata": {
         "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
-        "outputId": "81b27c5a-0c99-4616-f4bc-2538c0ddb070",
+        "outputId": "0a909928-a578-4eaa-8085-9a280c65aa1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -533,11 +533,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
       "metadata": {
         "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
-        "outputId": "87985e41-f3b9-465e-9967-6afa942c4eb3",
+        "outputId": "d1da5371-42b1-448b-eb99-c29c56e72f77",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -581,11 +581,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "22af61e9-0443-4705-94d7-24c21add09c7",
       "metadata": {
         "id": "22af61e9-0443-4705-94d7-24c21add09c7",
-        "outputId": "c723e8e3-1292-4a15-8949-c6a30f200aeb",
+        "outputId": "a7953e8f-b0ed-4ccc-ae1a-a3a5bc2caed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -636,14 +636,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
-        "outputId": "10b26e14-2288-4c33-b881-97b1c15b5ab8"
+        "outputId": "93529618-c6cc-4dcb-f361-ae005eafe540"
       },
       "outputs": [
         {
@@ -687,14 +687,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
-        "outputId": "2793bcc2-cea9-4885-853e-a9801bc1a424"
+        "outputId": "21389092-fbcd-45fc-dff3-0bc29ea556d2"
       },
       "outputs": [
         {
@@ -707,7 +707,7 @@
         }
       ],
       "source": [
-        "# PyTorch will calculate the gradients of all the leaf nodes in the graph\n",
+        "# PyTorch will calculate the gradients of all the nodes in the graph\n",
         "# use \"backward\" method\n",
         "loss.backward()\n",
         "# the gradiens are saved in \"grad\" attribute of each tensor like w1 and b that  have requires_grad=True\n",
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1",
       "metadata": {
         "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1"
@@ -775,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe",
       "metadata": {
         "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe"
@@ -788,14 +788,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
-        "outputId": "fb1b7dfb-917e-49da-d3e0-67a219fd09ec"
+        "outputId": "021ca38a-8829-4e17-faee-e147a568ca0f"
       },
       "outputs": [
         {
@@ -827,19 +827,19 @@
       ],
       "metadata": {
         "id": "W8Z3u1zynNDU",
-        "outputId": "f0417109-b198-4f99-b1c8-ba524830a264",
+        "outputId": "1bd88ed4-dd9b-4834-dcfd-e3c6b8ee84d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "W8Z3u1zynNDU",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<generator object Module.parameters at 0x7d768dbe30d0>\n",
+            "<generator object Module.parameters at 0x7e44ac54bd80>\n",
             "torch.Size([30, 50])\n",
             "torch.Size([30])\n",
             "torch.Size([20, 30])\n",
@@ -852,14 +852,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
-        "outputId": "f02f7659-08c3-42b9-98cf-0379180bcd18"
+        "outputId": "49eca03f-f75a-4910-b840-6965e22a78ce"
       },
       "outputs": [
         {
@@ -880,14 +880,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
-        "outputId": "6b051541-b925-4ad4-d4b8-59776f49ebec"
+        "outputId": "17f2eadf-6226-443f-fa4e-dc84f399d50c"
       },
       "outputs": [
         {
@@ -895,13 +895,13 @@
           "name": "stdout",
           "text": [
             "Parameter containing:\n",
-            "tensor([[ 0.1301,  0.0828,  0.0230,  ...,  0.1197, -0.1271, -0.0588],\n",
-            "        [-0.0640, -0.1266, -0.0704,  ..., -0.0956,  0.0665,  0.1277],\n",
-            "        [-0.0765, -0.0442,  0.1059,  ...,  0.0533, -0.0519, -0.0783],\n",
+            "tensor([[-0.0106,  0.0369, -0.1217,  ..., -0.0738,  0.0126, -0.0462],\n",
+            "        [ 0.1336, -0.0709, -0.0577,  ..., -0.0799,  0.0914,  0.0329],\n",
+            "        [-0.0683, -0.1233,  0.0188,  ..., -0.0876, -0.0864,  0.0380],\n",
             "        ...,\n",
-            "        [-0.0019,  0.0936,  0.1246,  ...,  0.0601,  0.0086, -0.0749],\n",
-            "        [-0.0106, -0.0553,  0.1395,  ..., -0.0649, -0.1358, -0.0057],\n",
-            "        [-0.1119, -0.1065,  0.1237,  ...,  0.1199, -0.1300,  0.0811]],\n",
+            "        [ 0.0482,  0.0397, -0.0215,  ...,  0.1104,  0.0639, -0.0431],\n",
+            "        [-0.0112,  0.0972, -0.1307,  ..., -0.1022, -0.0770,  0.0729],\n",
+            "        [-0.1029, -0.0707,  0.0837,  ...,  0.1251,  0.0008, -0.0458]],\n",
             "       requires_grad=True)\n"
           ]
         }
@@ -915,14 +915,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
-        "outputId": "45748797-1db3-4758-846f-55ca38c4299e"
+        "outputId": "c998fdd2-2536-4fe3-f059-fc37301bf4de"
       },
       "outputs": [
         {
@@ -951,14 +951,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
-        "outputId": "3effa11c-23db-43ef-c20e-f2065855602a"
+        "outputId": "fe84abe4-bd65-4a1a-85e9-abfe743ee02c"
       },
       "outputs": [
         {
@@ -987,13 +987,13 @@
       ],
       "metadata": {
         "id": "wXA_7GRUHQIq",
-        "outputId": "f99ce93b-8d5d-403d-f9cd-4c75387af9b4",
+        "outputId": "26dc97eb-bbed-4201-a64d-2dadfb61d24f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "wXA_7GRUHQIq",
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1015,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 28
         }
       ]
     },
@@ -1026,13 +1026,13 @@
       ],
       "metadata": {
         "id": "3qIMC8thTtFD",
-        "outputId": "b77944ea-f3fa-474b-d933-05594c60635f",
+        "outputId": "45aeec2c-9500-4050-a212-ebad28637278",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "3qIMC8thTtFD",
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,13 +1055,13 @@
       ],
       "metadata": {
         "id": "-ZeprqkQT7J9",
-        "outputId": "76a18886-dd53-4f22-c545-1c5760051b3e",
+        "outputId": "1df7fb67-fdfb-4957-c283-183542808fa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "-ZeprqkQT7J9",
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,14 +1074,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "57eadbae-90fe-43a3-a33f-c23a095ba42a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "57eadbae-90fe-43a3-a33f-c23a095ba42a",
-        "outputId": "b2b8bd74-e168-4e6b-de0c-4d1c3feac3ef"
+        "outputId": "af7a4059-edc1-41fb-89d7-89f084cac1ca"
       },
       "outputs": [
         {
@@ -1102,11 +1102,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "48d720cb-ef73-4b7b-92e0-8198a072defd",
       "metadata": {
         "id": "48d720cb-ef73-4b7b-92e0-8198a072defd",
-        "outputId": "c13cab89-75a1-4f55-e250-9f5fe3208042",
+        "outputId": "29229761-1188-482b-89e6-06b84d5439cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1495,8 +1495,7 @@
         "              f\" | Batch {batch_idx+1:03d}/{len(train_loader):03d}\"\n",
         "              f\" | Train/Val Loss: {loss:.2f}\")\n",
         "\n",
-        "    model.eval()\n",
-        "    # Optional model evaluation"
+        "    model.eval()  # Optional model evaluation"
       ]
     },
     {
